# CiaoHost

./: .replit  README.md  app.py  pyproject.toml  requirements.txt
LearnLevelHub/: app.py  booking_manager.py  guest_communication.py  llama_integration.py  property_manager.py  translations.py  utils.py
LearnLevelHub/attached_assets/: Pasted-si-tratta-di-un-azienda-specializzata-in-co-hosting-di-locale-B-B-ma-un-co-hodting-molto-particolar-1746883619578.txt  Pasted-si-tratta-di-un-azienda-specializzata-in-co-hosting-di-locale-B-B-ma-un-co-hodting-molto-particolar-1746883659030.txt  b2c92b12-5a5e-4984-b0a4-e78d3dfef60d.avif
LearnLevelHub/data/: bookings.csv  guests.csv  messages.csv  properties.csv
attached_assets/: Pasted-Progetto-Applicazione-CiaoHost-Gestione-Immobili-B-B-a-Breve-Termine-Obiettivo-Creare-un-applic-1746899639948.txt
data/: ciao_host.db  pricing_ce41c896-10f2-4fd2-b15d-170fd87702ce.json  pricing_cea6b154-da24-4923-9faf-9ac04b6b0b9c.json  properties.json
pages/: bookings.py  cleaning_management.py  dashboard_creator.py  fiscal_management.py  report_builder.py  settings.py  virtual_co_host.py
utils/: visualization.py
