[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.51.0",
    "fpdf>=1.7.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "openai>=1.78.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pymysql>=1.1.1",
    "reportlab>=4.4.0",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.45.0",
    "trafilatura>=2.0.0",
    "twilio>=9.6.0",
    "weasyprint>=65.1",
]
